# TRI

./: CMakeLists.txt  readme.md
cmake/: TRIConfig.cmake.in
examples/: CMakeLists.txt
include/tri/blas/: gemm.hpp  solver.hpp  svd.hpp  types.hpp
include/tri/common/: config.hpp  macros.hpp  types.hpp
include/tri/core/: blocked_tri.hpp  dense_rm.hpp  factory.hpp  lower_tri_rm.hpp  matrix_base.hpp
include/tri/factory/: blocked_factory.hpp  dense_factory.hpp  tri_factory.hpp
include/tri/linalg/: backward_substitution.hpp  cholesky.hpp  dense_ops.hpp  forward_substitution.hpp  inverse.hpp  matrix_ops.hpp  pseudoinverse.hpp  vector_ops.hpp
include/tri/mem/: access_count_policy.hpp  block_key.hpp  block_manager.hpp  block_storage.hpp  eviction_policy.hpp  lru_policy.hpp
src/tri/blas/: gemm.cpp  solver.cpp  svd.cpp
src/tri/core/: blocked_tri.cpp  dense_rm.cpp  lower_tri_rm.cpp
src/tri/factory/: blocked_factory.cpp  dense_factory.cpp  tri_factory.cpp
src/tri/mem/: access_count_policy.cpp  block_manager.cpp  lru_policy.cpp
tests/: CMakeLists.txt  main.cpp
tests/fixtures/: matrix_fixtures.hpp  test_data.hpp
tests/framework/: test_assertions.hpp  test_runner.hpp  test_utils.hpp
tests/integration/: test_comprehensive_api.cpp  test_mem_integration.cpp
tests/unit/blas/: test_blocked_blas.cpp  test_gemm.cpp  test_solver.cpp  test_svd.cpp
tests/unit/core/: test_blocked_tri.cpp  test_blocked_tri_with_manager.cpp  test_dense_rm.cpp  test_lower_tri_rm.cpp
tests/unit/factory/: test_blocked_factory.cpp  test_dense_factory.cpp  test_tri_factory.cpp
tests/unit/mem/: test_block_key.cpp  test_block_manager.cpp  test_eviction_policy.cpp
